--- a/index.html
+++ b/index.html
@@ -43,12 +43,14 @@ button{
     font-size:16px;
 }
 
+/* HEADER */
 .header{
     display:flex;
     justify-content:space-between;
     align-items:center;
     padding:10px 0;
 }
+
 .center{
     text-align:center;
     display:flex;
@@ -56,6 +58,7 @@ button{
     gap:4px;
 }
 
+/* PASTE LOGO */
 .paste-area{
     width:90px;
     height:80px;
@@ -63,7 +66,9 @@ button{
     display:flex;
     justify-content:center;
     align-items:center;
+    text-align:center;
     font-size:11px;
+    cursor:pointer;
 }
 .paste-area img{max-height:70px;}
 </style>
@@ -75,18 +80,37 @@ button{
 
 <div id="sessionPlan">
 
+<!-- HEADER -->
 <div class="header">
-    <div class="paste-area" contenteditable="true" data-img="leftLogo">Paste Logo<img id="leftLogo"></div>
+
+    <div class="paste-area" contenteditable="true" data-img="leftLogo">
+        Paste Logo
+        <img id="leftLogo">
+    </div>
 
     <div class="center">
         <input value="ES KAVUMU TSS" style="text-align:center;font-weight:bold;">
         <input value="District: Ngororero" style="text-align:center;">
         <input value="Sector: Kavumu" style="text-align:center;">
-        <div><b>Email:</b> <input value="nsengumuremyialex@gmail.com"></div>
-        <div><b>Tel:</b> <input value="0788774880"></div>
+
+        <!-- Email first -->
+        <div>
+            <b>Email:</b>
+            <input value="nsengumuremyialex@gmail.com" style="width:250px;">
+        </div>
+
+        <!-- Tel on new line -->
+        <div>
+            <b>Tel:</b>
+            <input value="0788774880" style="width:150px;">
+        </div>
     </div>
 
-    <div class="paste-area" contenteditable="true" data-img="rightLogo">Paste Logo<img id="rightLogo"></div>
+    <div class="paste-area" contenteditable="true" data-img="rightLogo">
+        Paste Logo
+        <img id="rightLogo">
+    </div>
+
 </div>
 
 <h3>SESSION PLAN</h3>
@@ -98,6 +122,49 @@ button{
 <th>Level</th><td><input></td>
 <th>Date</th><td><input type="date"></td>
 </tr>
+
+<tr>
+<th>Trainer name</th>
+<td colspan="3"><input></td>
+<th>Term</th>
+<td colspan="3"><input></td>
+</tr>
+
+<tr>
+<th>Module title</th>
+<td colspan="7"><input></td>
+</tr>
+
+<tr>
+<th>Week</th><td><input></td>
+<th>No. Trainees</th><td><input type="number"></td>
+<th>Class</th><td colspan="3"><input></td>
+</tr>
+
+<tr>
+<th>Learning Outcome</th>
+<td colspan="7"><textarea rows="2"></textarea></td>
+</tr>
+
+<tr>
+<th>Topic of the session</th>
+<td colspan="7"><input></td>
+</tr>
+
+<tr>
+<th>Range</th>
+<td colspan="7"><textarea rows="4"></textarea></td>
+</tr>
+
+<tr>
+<th>Objectives</th>
+<td colspan="7"><textarea rows="5"></textarea></td>
+</tr>
+
+<tr>
+<th>Facilitation techniques</th>
+<td colspan="7"><textarea rows="3"></textarea></td>
+</tr>
 </table>
 
 <br>
@@ -105,37 +172,6 @@ button{
 <table>
 <tr class="section">
 <td colspan="3">Introduction</td>
-<td>Resources</td>
-<td>Duration</td>
-</tr>
-
-<tr>
-<td colspan="3">
-<b>Trainer’s activity</b><br>
-• Greets the learners<br>
-• Takes the roll call<br>
-• Involves the learners in setting ground rules<br>
-• Announces the topic of the session<br>
-• Presents and explains the objectives of the session<br><br>
-
-<b>Learner’s activity</b><br>
-• Respond to the greetings<br>
-• Respond to the roll call<br>
-• Participate in setting ground rules<br>
-• Listen to the new topic of the session<br>
-• Follow the objectives of the session
-</td>
-
-<td>
-<textarea rows="4">Chalk
-Chalkboard</textarea>
-</td>
-
-<td><input></td>
-</tr>
-
-<tr class="section">
-<td colspan="3">Development</td>
 <td>Resources</td>
 <td>Duration</td>
 </tr>
@@ -152,60 +188,36 @@ Chalkboard</textarea>
 </tr>
 
 <tr class="section">
-<td colspan="3">Conclusion</td>
-<td>Resources</td>
-<td>Duration</td>
+<td colspan="5">Conclusion</td>
 </tr>
 
 <tr>
 <td colspan="3">
 <b>Summary</b><br>
-Trainer involves learners in summarizing the session by asking questions
-related to the objectives while learners participate by answering questions.
+<textarea rows="3"></textarea>
 </td>
 <td><textarea rows="3"></textarea></td>
 <td><input></td>
 </tr>
-
-<tr class="section">
-<td colspan="3">Assessment</td>
-<td>Resources</td>
-<td>Duration</td>
-</tr>
-
-<tr>
-<td colspan="3">
-Trainer gives instructions related to assessment, distributes assessment sheet,
-while learners receive and complete the assessment.
-</td>
-<td>• Attendance sheet</td>
-<td><input></td>
-</tr>
-
-<tr class="section">
-<td colspan="3">Evaluation of the session</td>
-<td>Resources</td>
-<td>Duration</td>
-</tr>
-
-<tr>
-<td colspan="3">
-Trainer asks trainees to give feedback on the session delivery and announce
-the next topic while learners evaluate the session by answering asked
-questions.
-</td>
-<td>• Various drawing materials</td>
-<td><input></td>
-</tr>
-
 </table>
+
+<br>
+
+<b>References:</b>
+<textarea rows="4" style="width:100%;border:1px solid black;"></textarea>
+
+<br><br>
+
+<b>Reflection:</b>
+<textarea rows="3" style="width:100%;border:1px solid black;"></textarea>
 
 </div>
 
 <script>
+// paste image only
 document.querySelectorAll(".paste-area").forEach(area=>{
     area.addEventListener("paste",e=>{
-        const items=e.clipboardData.items;
+        const items=(e.clipboardData||window.clipboardData).items;
         for(let item of items){
             if(item.type.includes("image")){
                 const reader=new FileReader();
@@ -226,7 +238,10 @@ async function generatePDF(){
     const img=canvas.toDataURL("image/png");
 
     const pdf=new jsPDF("p","mm","a4");
-    pdf.addImage(img,"PNG",0,0,210,297);
+    const w=pdf.internal.pageSize.getWidth();
+    const h=(canvas.height*w)/canvas.width;
+
+    pdf.addImage(img,"PNG",0,0,w,h);
     pdf.save("Session_Plan.pdf");
 }
 </script>
