--- a/index.html
+++ b/index.html
@@ -109,15 +109,7 @@ button{
 
 <h3>SESSION PLAN</h3>
 
-<!-- TOP TABLE: User Info + Module -->
 <table>
-<tr>
-<th>Your Name</th><td><input></td>
-<th>Your Class</th><td><input></td>
-<th>Your Level</th><td><input></td>
-<th>Date</th><td><input type="date"></td>
-</tr>
-
 <tr>
 <th>Module Code</th><td><input></td>
 <th>Module Title</th><td><input></td>
@@ -217,8 +209,7 @@ button{
 <b>Learner’s activity</b><br>
 <textarea rows="5"></textarea>
 </td>
-<td><textarea rows="5">• Chalk
-• Chalkboard</textarea></td>
+<td><textarea rows="5"></textarea></td>
 <td><input></td>
 </tr>
 
